Instalacja postcss import, utworzenie folderu base (na style globalne) i modules(na moduły css) w app/assets/styles, użycie normalize.css, użycie Browsersync do automatycznego odieżania strony po zmianach index.html, injekcja stylów css uporządkowanie plików Gulp do folderu gulp

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,9 +1,13 @@
-$testColor: #ffccee;
+@import "normalize.css";
+@import "base/_global.css";
+@import "modules/_test";
+
+$testColor: #000; 
 
 body{
-	color: $testColor;
+	color: $testColor; 
 
 	&--test{
-		color: red;
+		color: red; 
 	}
 }
