Dodana obsuga badddwww css w gulp (styles) - nie jest przerywany watch, dodanie obsugi mixins (postcss-mixins) i dodanie (na razie testowych brake-points), dodanie pakietu hexrgba(postcss-hexrgba)

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,13 +1,7 @@
 @import "normalize.css";
-@import "base/_global.css";
+@import "base/_global";
+@import "base/_mixins";
+
+/*moduł do testowania */
 @import "modules/_test";
 
-$testColor: #000; 
-
-body{
-	color: $testColor; 
-
-	&--test{
-		color: red; 
-	}
-}
