--- a/app/assets/styles/modules/_test.css
+++ b/app/assets/styles/modules/_test.css
@@ -1,1 +1,11 @@
+.flexbox{
+	/*display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 20px;*/
+	display: flex;
+}
 
+.container .test{
+	border: 1px solid #000;
+	padding: 0.2em;
+}
