--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,6 +1,8 @@
 @import "normalize.css";
 @import "base/_global";
 @import "base/_mixins";
+@import "modules/_filmBox";
+@import "modules/_repertuarDnia";
 
 /*moduł do testowania */
 @import "modules/_test";
