--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,8 +1,17 @@
 @import "normalize.css";
 @import "base/_global";
 @import "base/_mixins";
+@import "base/_colors";
+@import "modules/_pageContainer";
+@import "modules/_header";
+@import "modules/_repertuar";
+@import "modules/_promocje";
+@import "modules/_cennik";
+@import "modules/_footer";
+@import "modules/_navigation";
 @import "modules/_filmBox";
 @import "modules/_repertuarDnia";
+@import "modules/_zobaczCS";
 
 /*moduł do testowania */
 @import "modules/_test";
