--- a/app/assets/styles/modules/_repertuarDnia.css
+++ b/app/assets/styles/modules/_repertuarDnia.css
@@ -1,4 +1,13 @@
 .repertuarDnia{
+	
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	grid-gap: 10px;
+
+	&__heading{
+		display: none;
+	}
+
 	&--initUkryty{
 		display: none;
 	}
