uzycie czcionek systemowych za pomoca _system-font.css

--- a/app/assets/styles/base/_colors.css
+++ b/app/assets/styles/base/_colors.css
@@ -2,7 +2,7 @@
 $szaryCiemny: #333;
 $tekstJasny: #eee;
 $pomaranczowy: #EA7217;
-
-/* Użycie kolorow */
-$headerBg: $szaryCiemny;
 $headerCol: #FFF;
+
+/* Użycie kolorów */
+$headerBg: $szaryCiemny;
