--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -2,6 +2,8 @@
 @import "base/_global";
 @import "base/_mixins";
 @import "base/_colors";
+@import "base/_system-font";
+
 @import "modules/_pageContainer";
 @import "modules/_header";
 @import "modules/_repertuar";
