--- a/app/assets/styles/base/_colors.css
+++ b/app/assets/styles/base/_colors.css
@@ -2,7 +2,13 @@
 $szaryCiemny: #333;
 $tekstJasny: #eee;
 $pomaranczowy: #EA7217;
-$headerCol: #FFF;
+
 
 /* Użycie kolorów */
+
+/* Nagłówek */
 $headerBg: $szaryCiemny;
+$headerCol: $tekstJasny;
+$primaryNavCol: $tekstJasny;
+
+$btnNavBg: $pomaranczowy;
