--- a/app/assets/styles/modules/_pageContainer.css
+++ b/app/assets/styles/modules/_pageContainer.css
@@ -1,6 +1,8 @@
 .pageContainer{
 
-	.XXXcssgrid &{
+	/*display: none;*/
+
+	/*.XXXcssgrid &{
 
 		display: grid;
 		grid-template-areas:
@@ -22,5 +24,5 @@
 				"footer 	zobaczCS";
 		}
 
-	}
+	}*/
 }
