--- a/app/assets/styles/modules/_movieBox.css
+++ b/app/assets/styles/modules/_movieBox.css
@@ -16,7 +16,7 @@ border: 1px solid black; /*TESTOWE*/
 		align-items: start;
 
 
-		&__plakat{
+		&__poster{
 			grid-column: 1/2;
 			grid-row: 1 / 7;
 			width: 200px;
@@ -31,7 +31,7 @@ border: 1px solid black; /*TESTOWE*/
 			grid-column: 2/3;
 		}
 
-		&__zobaczWszystkie{
+		&__seeAllBtn{
 			grid-column: 2/3;
 		}
 	}
@@ -40,7 +40,7 @@ border: 1px solid black; /*TESTOWE*/
 		display: none;
 	}
 
-	&__etykieta--ukryte{
+	&__lbl--hidden{
 		display: none;
 	}
 
