--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,3 +1,9 @@
 .btn{
-	
+    border: 1px solid $btnBorder;
+    background-color: transparent;
+
+    &--projection{
+        display: flex;
+        flex-direction: column;
+    }
 }
