--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,6 +4,9 @@
 @import "base/_colors";
 @import "base/_system-font";
 
+@import "modules/_group";
+
+@import "modules/_body";
 @import "modules/_pageContainer";
 @import "modules/_wrapper";
 @import "modules/_site-header";
