--- a/app/assets/styles/modules/_movieSchedule.css
+++ b/app/assets/styles/modules/_movieSchedule.css
@@ -1,17 +1,22 @@
 .movieSchedule{
-/* na razie tylko za pomocą grid */
 
 	&__ofDay{
 	/* Repertuar dla konkretnego dnia */
-	display: grid;
-	grid-gap: 20px;
+	margin-top: 3em;
 
 		&--hidden{
 			display: none;
+			color: red;
 		}
 		
 		&__heading{
-			grid-column: span 3;
+			display: none;
 		}
+	}
+
+	.cssgrid &__ofDay{
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-gap: 20px;
 	}
 }
