Dodanie ukrywania nieaktywnych dni repertuaru oraz etykiet dnia za pomocą klasy visually-hidden (accessibility)

--- a/app/assets/styles/modules/_movieSchedule.css
+++ b/app/assets/styles/modules/_movieSchedule.css
@@ -1,3 +1,8 @@
 .movieSchedule{
 
 }
+
+.movieSchedule__ofDay{
+	/* dodatkowo klasa visually-hidden (z osobnego modułu) jest używana do ukrywania wizualnego nieaktywnych dni */
+	display: flex;
+}
