--- a/app/assets/styles/modules/_movieBox.css
+++ b/app/assets/styles/modules/_movieBox.css
@@ -2,11 +2,46 @@
 
 	background-color: $movieBoxBg;
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-	margin: 20px 0;
+	flex: 1;
+	padding-right: 20px;
+
+	&__poster{
+		width: 200px;
+		height: 280px;
+	}
+
+	&__projections ul{
+		list-style: none;
+	}
+
+	/* ---------------- tymczasowo ukryte --------------- */
+	&__aboutBtn, &__pickProjectionLbl, &__seeAllBtn, &__movieLabel{
+		display: none;
+	}
+
 }
 
-.movieBox__poster{
-	display: none;
+/* FLEXBOX */
+.flexbox .movieBox {
+	
+	&__projections ul{
+		display: flex;
+		flex-wrap: wrap;
+	}
+}
+		
+/* CSSGRID */
+.cssgrid .movieBox {
+
+	display: grid;
+    grid-template-columns: min-content max-content;
+    grid-template-rows: repeat(5, max-content);
+	grid-column-gap: 20px;
+
+	&__poster{
+		grid-row: span 5;
+	}
+	
 }
 
 
