--- a/app/assets/styles/modules/_movieSchedule.css
+++ b/app/assets/styles/modules/_movieSchedule.css
@@ -1,8 +1,24 @@
 .movieSchedule{
 
+	&__ofDay{
+		margin-top: 3em;
+	}
+	
 }
 
-.movieSchedule__ofDay{
-	/* dodatkowo klasa visually-hidden (z osobnego modułu) jest używana do ukrywania wizualnego nieaktywnych dni */
-	display: flex;
+/* FLEXBOX */
+.flexbox .movieSchedule{
+	&__ofDay{
+		display: flex;
+		flex-wrap: wrap;
+	}
+}
+
+/* CSSGRID */
+.cssgrid .movieSchedule{
+	&__ofDay{
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-gap: 20px;
+	}
 }
