--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -11,7 +11,13 @@
 }
 
 @define-mixin atLarge{
-	@media (min-width: 1200px){
+	@media (min-width: 1100px){
+		@mixin-content;
+	}
+}
+
+@define-mixin atHuge{
+	@media (min-width: 1600px){
 		@mixin-content;
 	}
 }
