--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -9,11 +9,19 @@
         &__hour{
             font-size: 2rem;
         }
+
+        &__noLbl{
+            visibility: hidden;
+        }
     }
 
     /* FLEXBOX */
     .flexbox &--projection{
         display: flex;
         flex-direction: column;
+
+        span{
+            width: 100%;
+        }
     }
 }
