Względnie obiecujące ostylowanie przycisków projekcji w movieBox (za pomocą flex ale i tak wygląda w miarę tylko gdy movie box stylowany jest za pomocą grid.

--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -17,11 +17,11 @@
 
     /* FLEXBOX */
     .flexbox &--projection{
+        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
+        align-items: stretch;
 
-        span{
-            width: 100%;
-        }
     }
 }
