Pokazujący się na hover movieBoxa lub na focus klawiatury przycisk "Zobacz wszystkie seanse"

--- a/app/assets/styles/modules/_movieBox.css
+++ b/app/assets/styles/modules/_movieBox.css
@@ -14,6 +14,21 @@
 		list-style: none;
 	}
 
+	&__seeAllBtn{
+		/* visibility: hidden; */
+		opacity: 0;
+	}
+
+	&__seeAllBtn:focus{
+		/* visibility: hidden; */
+		opacity: 1;
+	}
+
+	&:hover &__seeAllBtn{
+		/* visibility: visible; */
+		opacity: 1;
+	}
+
 	/* ---------------- tymczasowo ukryte --------------- */
 	&__aboutBtn, &__pickProjectionLbl, &__movieLabel{
 		display: none;
@@ -55,7 +70,15 @@
 	&__poster{
 		grid-row: span 5;
 	}
-	
+
+	&__projections ul{
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+
+		li{
+			
+		}
+	}
 }
 
 
