--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -8,3 +8,16 @@
 body, button{
 	font-family: Lato;
 }
+
+h1{
+	font-size: 2rem;
+}
+
+h2{
+	font-size: 1.5rem;
+}
+
+h3{
+	font-size: 1.15rem;
+	font-weight: 600;
+}
