Działające wstępne ostylowanie responsywnej tabeli cennika

--- a/app/assets/styles/modules/_test.css
+++ b/app/assets/styles/modules/_test.css
@@ -1,9 +1,4 @@
-.cssgrid{
-/* klasa o tej nazwie musi być w arkuszu, żeby gulp-modernizr testował css-grid */
-	display: grid;
-}
-
-.flexbox{
-/* klasa o tej nazwie musi być w arkuszu, żeby gulp-modernizr testował flexbox */
+.site-header, .movieSchedule{
+	display: none;
 }
 
