--- a/app/assets/styles/modules/_slickCarousel.css
+++ b/app/assets/styles/modules/_slickCarousel.css
@@ -9,8 +9,9 @@
 	}
 }
 
-.slickCarousel--filmy{
+.slickCarousel--movies{
     max-width: 100vw;
+    margin: 0 auto;
 
     /* obejście problemu responsywności slick */
     /* w zależności od szerokości ekranu ustawia ilość elementów */
@@ -39,5 +40,10 @@
     img{
         height: 280px;
         width: 200px;
+    }
+
+    &__el{
+        position: relative;
+        border-left: 1px solid black;
     }
 }
