--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,7 +13,8 @@
 @import "modules/_site-header";
 @import "modules/_movieSchedule";
 @import "modules/_dayPicker";
-@import "modules/_promocje";
+@import "modules/_promotions";
+@import "modules/_gallery";
 @import "modules/_cennik";
 @import "modules/_footer";
 @import "modules/_primary-nav";
