Responsywne ostylowanie promocji kinowych. Z działającym fallbackiem dla .no-flexbox

--- a/app/assets/styles/modules/_test.css
+++ b/app/assets/styles/modules/_test.css
@@ -7,7 +7,7 @@
 /* klasa o tej nazwie musi być w arkuszu, żeby gulp-modernizr testował flexbox */
 }
 
-.movieSchedule {
+/* .movieSchedule {
 	display: none;
-}
+} */
 
