Ostylowane tabele cennika (responsywne i z fallbackiem dla braku obsługi flexbox)

--- a/app/assets/styles/base/_colors.css
+++ b/app/assets/styles/base/_colors.css
@@ -33,3 +33,7 @@ $btnBorder: $szarySredni;
 $labelBg: $pomaranczowy;
 $labelCol: $bialy;
 
+/* rTable */
+$rTableBgCol: $szarySredni;
+$rTableBorCol: $bialy;
+
