--- a/app/assets/styles/modules/_rTable.css
+++ b/app/assets/styles/modules/_rTable.css
@@ -2,8 +2,18 @@
 .rTable{
     
         /* style dla wersji najmniejszej */
+        min-width: 170px;
+
         &--collapse{
             display: block;
+        }
+
+        /* wyśrodkowanie h4 w pionie */
+        h4.priceList{
+                /* wyśrodkowanie w komórce */
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
         }
     
         &__cell{
@@ -23,7 +33,9 @@
         &__subcell{
             box-sizing: border-box;
             flex-grow: 1;
-            border: 1px solid #CECDCD;
+            border: 1px solid $rTableBorCol;
+            background-color: $rTableBgCol;
+            padding: .3rem;
     
             &--label{
                 width: 50%;
@@ -31,6 +43,7 @@
     
             &--value{
                 width: 50%;
+                text-align: center;
             }
     
             &--hideBig{
@@ -53,6 +66,7 @@
                
                 &--empty{
                     display: block;
+                    background-color: transparent;
                     border: none;
                 }
     
@@ -103,10 +117,18 @@
         display: block;
     }
 
+    & .rTable__subcell{
+        width: 100%;
+    }
+
     & .rTable__subcell--hideBig{
         display: block;
     }
 
+    /* zresetowanie wyśrodkowania h4 w pionie */
+    h4.priceList{
+            transform: translateY(0%);
+        }
+
 }
-    
     
