--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -14,7 +14,7 @@
 @import "modules/_movieSchedule";
 @import "modules/_dayPicker";
 @import "modules/_promocje";
-@import "modules/_cennik";
+@import "modules/_priceList";
 @import "modules/_footer";
 @import "modules/_primary-nav";
 @import "modules/_movieBox";
