--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -22,7 +22,7 @@
 @import "modules/_footer";
 @import "modules/_primary-nav";
 @import "modules/_movieBox";
-@import "modules/_zobaczCS";
+@import "modules/_seeCS";
 @import "modules/_btn";
 @import "modules/_label";
 
