Ostylowanie responsywne stopki (z wyróżnionym numerem telefonu i google maps)

--- a/app/assets/styles/base/_colors.css
+++ b/app/assets/styles/base/_colors.css
@@ -45,5 +45,12 @@ $rTableBorCol: $bialy;
 /* seeCS */
 $seeCSBg: $pomaranczowy;
 
+/* contact */
+$contactPhoneCol: $pomaranczowy;
+$contactPhoneBg: $bialy;
+
+$contactAddressCol: $bialy;
+$contactAddressBg: $pomaranczowy;
+
 
 
