Podstawowa wersja dodawania event listenerów do przycisków otwierających modale

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -25,6 +25,7 @@
 @import "modules/_seeCS";
 @import "modules/_btn";
 @import "modules/_label";
+@import "modules/_modal";
 
 /* dane kontaktowe w stopce */
 @import "modules/_contact";
