--- a/app/assets/styles/modules/_modal.css
+++ b/app/assets/styles/modules/_modal.css
@@ -14,6 +14,16 @@
         display: block;
     }
 
+    &__header{
+        position: relative;
+        background-color: red;
+        margin: 0;
+    }
+
+    &__heading{
+        float: left;
+    }
+
     &__closeBtn{
         color: $modalCloseBtnCol;
         float: right;
@@ -22,7 +32,7 @@
         &:hover, &:focus{
             color: $modalCloseBtnHoverCol;
             text-decoration: none;
-            coursor: pointer;
+            cursor: pointer;
         }
     }
 
