Ostylowany modal szczegółów cennika

--- a/app/assets/styles/base/_colors.css
+++ b/app/assets/styles/base/_colors.css
@@ -60,5 +60,7 @@ $modalContentBg: $szaryJasny;
 $modalCloseBtnHoverCol: $szaryCiemny;
 $modalCloseBtnCol: $bialy;
 
+/* em */
+$emCol: $pomaranczowy;
 
 
